# emergency-backup

./: .gitignore  Cargo.toml  README.md
config/: Cargo.toml  README.md
config/src/: lib.rs
docs/: Presentazione PDS.key
embctl/: Cargo.toml  README.md  build.rs
embctl/src/: main.rs
embgui/: Cargo.toml  README.md  build.rs
embgui/assets/: embgui.icns
embgui/gui/: appwindow.slint  side_bar.slint
embgui/gui/pages/: about.slint  home.slint  how_to_use.slint  page.slint  settings.slint
embgui/src/: main.rs
embgui/src/gui_action/: mod.rs
errors/: Cargo.toml
errors/src/: lib.rs
installer/: Cargo.toml  README.md  build.rs
installer/assets/: installer.icns
installer/src/: gui_helper.rs  main.rs
installer/ui/: appwindow.slint  page.slint
mouse_tracker/: Cargo.toml  README.md  build.rs
mouse_tracker/src/: main.rs  mod.rs  mouse_tracker.rs
mouse_tracker/src/data_type/: mod.rs  mouse_position.rs  screen_size.rs
service-manager-util/: Cargo.toml  README.md
service-manager-util/src/: lib.rs
settings/: Cargo.toml  README.md
settings/src/: lib.rs
window-spawn-util/: Cargo.toml  README.md
window-spawn-util/src/: lib.rs
window-spawn-util/windows/: deny_window.slint  error_window.slint  success_window.slint
