[package]
name = "embgui"
version = "1.0.0"
edition = "2021"
authors = ["Giovanni Mirarchi"]
build = "build.rs"
description = "Emergency Backup GUI"

[dependencies]
slint = "1.7.0"
anyhow = "1.0.86"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["gzip"] }
native-dialog = "0.7.0"
service-manager-util = { path = "../service-manager-util" }
window-spawn-util = { path = "../window-spawn-util" }
settings = { path = "../settings" }
config = { path = "../config" }
errors = { path = "../errors"}

[build-dependencies]
slint-build = "1.6"
winresource = "0.1.17"

[package.metadata.bundle.bin.embgui]
name = "embgui"
identifier = "it.gmirarchi.embgui"
icon = ["assets/embgui.icns"]
category = "Utility"
short_description = "Emergency Backup GUI"