[package]
name = "mouse_tracker"
version = "1.0.0"
edition = "2021"
authors = ["Giovanni Mirarchi"]
build = "build.rs"

[dependencies]
settings = { path = "../settings" }
errors = { path = "../errors" }
config = { path = "../config" }
service-manager-util = { path = "../service-manager-util" }
window-spawn-util = { path = "../window-spawn-util" }
dircpy = "0.3.19"
display-info = "0.5.1"
perf_monitor = "0.2.1" #Used for cpu consumption monitoring
cpu-time = "1.0.0"
fs_extra = "1.3.0"
anyhow = "1.0.86"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["gzip"] }
ringbuffer = "0.15.0"
mouse_position = "0.1.4"

[build-dependencies]
winresource = "0.1.17"