[package]
name = "service-manager-util"
version = "0.1.0"
edition = "2021"
authors = ["Giovanni Mirarchi"]

[dependencies]
anyhow = "1.0.86"
service-manager = "0.7.0"
log = "0.4.21"
log4rs = { version = "1.3.0", features = ["gzip"] }
notify-rust = "4.11.0"
settings = { path = "../settings" }
config = { path = "../config" }
errors = { path = "../errors" }

[target.'cfg(target_family = "windows")'.dependencies]
winreg = "0.52.0"
sysinfo = "0.30.13"